<resources>
    <string name="app_name">Peluquería en un click</string>
    <string name="info_text">Necesitas tener creada una cuenta para iniciar la aplicación</string>
    <string name="crear_boton">CREAR CUENTA</string>
    <string name="nombre_input">Nombre</string>
    <string name="contrasena_input">Contraseña</string>
    <string name="recordar_check">Recordarme</string>
    <string name="olvidar_text">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_boton">INICIAR SESIÓN</string>
    <string name="texto_boton">ACCEDER</string>
    <string name="fragment_entrar">HAS ENTRADO AL SISTEMA</string>
    <string name="user">User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="cita">Reserva de citas</string>
    <string name="productos">Productos</string>
    <string name="menu">Menú</string>
    <string name="navigation_close">close</string>
    <string name="navigation_open">open</string>
    <string name="descripcion">"Disfrutarás de la experiencia de belleza más completa, única y diseñada pensando siempre en ti.\n\nYa sea que te gustan los cortes modernos o clásicos, podemos asesorarte para que tu corte refleje el estilo y personalidad que quieres proyectar.\n\nEl trabajo es una manera de expresar y recibirás la atención más exquisita que podamos darte. Queremos hacer que te olvides de la rutina del día a día y se sientan absolutamente cómodos y atendidos durante el servicio."</string>
    <string name="reservas">Mis reservas</string>
    <string name="reservas_cliente">Próximas reservas</string>
    <string name="info_cuenta">Información de la cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="editar_datos">EDITAR DATOS</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="aceptar">Aceptar</string>
    <string name="email">email</string>
    <string name="phone">telefono</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="confirmar_contrasenya">Confirmar contraseña</string>
    <string name="contrasenya">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="inscribir">¿Aún no tienes una cuenta? ¡Inscríbete!</string>
    <string name="agenda">Agenda</string>
    <string name="horario">Horarios</string>
    <string name="fecha">Fecha</string>
    <string name="servicios">Servicios</string>
    <string name="sin_productos">Sin productos</string>
    <string name="hora">Hora</string>
    <string name="precio">Precio</string>
    <string name="nombre_precio_producto">Nombre XX€</string>
    <string name="descrip">Descripción</string>
    <string name="cantidad">Cantidad</string>
    <string name="anadir_a_cita">Añadir a cita</string>
    <string name="cancelar">CANCELAR</string>
    <string name="volver">Volver</string>
    <string name="logout">Cerrar sesión</string>
    <string name="salir">Salir de la aplicación</string>
    <string name="texto_prueba_nombre_producto">Aceite de limón</string>
    <string name="texto_prueba_nombre_empresa">de El barbero feliz</string>
    <string name="precio_prueba_producto">15€</string>
    <string name="descripcion_prueba_producto">Producto para el cuidado de la barba</string>
    <string name="elige_fecha">Elige fecha</string>
    <string name="selecciona_hora">Selecciona hora</string>
    <string name="selecciona_profesional">Selecciona profesional</string>
    <string name="selecciona_servicio">Selecciona servicio</string>
    <string name="introduce_tus_datos">Introduce tus datos</string>
    <string name="registrar">REGISTRAR</string>
    <string name="modificar_contrasena">Modificar contraseña</string>
    <string name="fechas_seleccionadas">Fechas seleccionadas</string>
    <string name="sin_fechas_seleccionadas">Sin fechas seleccionadas</string>
    <string name="escoge_empleado_s">Escoge empleado/s</string>
    <string name="escoge_horario_s">Escoge horario/s</string>
    <string name="listado_horarios_no_disponibles">Listado horarios no disponibles</string>
    <string name="gesti_n_de_horarios">Gestión de horarios</string>
    <string name="seleccionar_datos">Debe seleccionar todos los datos</string>
    <string name="deshabilita_disponibilidad">Deshabilita disponibilidad</string>
    <string name="eliminar">Eliminar</string>
    <string name="selecciona_cliente">Selecciona cliente</string>
    <string name="reservar">Reservar</string>
    <string name="_10_00">10:00</string>
    <string name="unidades_en_stock">unidades en stock</string>
    <string name="cargando">Cargando...</string>
    <string name="login">Login</string>
    <string name="texto_recordar">¿Has olvidado tu nombre de usuario o contraseña? Introduce tu email y te enviaremos todo lo que necesitas para volver a Peluquería en un click.</string>
    <string name="resetear_contrase_a">Resetear contraseña</string>
</resources>