<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff6659"
        android:padding="@dimen/dialog_body">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:src="@drawable/white_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_usuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_between"
            android:hint="@string/usuario"
            android:textColorHint="@color/white"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombre_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:padding="@dimen/edit_text_padding"
                android:singleLine="true"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_contra"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:layout_marginBottom="@dimen/padding_between"
            android:hint="@string/contrasenya"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contra_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                android:singleLine="true"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/olvidar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingTop="@dimen/padding_between"
            android:text="@string/olvidar_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@+id/text_input_layout_contra"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_contra" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/iniciar_sesion_boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:text="@string/iniciar_boton"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/olvidar_text" />

        <TextView
            android:id="@+id/registrar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_between"
            android:text="@string/inscribir"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iniciar_sesion_boton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
