<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:id="@+id/vistaCompleta"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/texto_prueba_nombre_producto"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/fotoProducto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nombreEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/texto_prueba_nombre_empresa"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/fotoProducto"
            app:layout_constraintTop_toBottomOf="@id/nombreProducto" />

        <TextView
            android:id="@+id/precioProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:text="@string/precio_prueba_producto"
            android:textSize="27sp"
            app:layout_constraintStart_toEndOf="@id/fotoProducto"
            app:layout_constraintTop_toBottomOf="@id/nombreEmpresa" />

        <TextView
            android:id="@+id/descripcionProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/descripcion_prueba_producto"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/fotoProducto"
            app:layout_constraintTop_toBottomOf="@id/precioProducto" />

        <ImageView
            android:id="@+id/fotoProducto"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/avatar"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/cantidadProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:text="Cantidad" />

        <Spinner
            android:id="@+id/cantidadSpinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:dropDownWidth="50dp"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/addCitaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
            android:text="@string/anadir_a_cita"
            android:textSize="10sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="559dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#d32f2f"
            android:clickable="true"
            android:src="@drawable/home"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cantidadProductos"
            app:tint="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

