<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:background="@drawable/shadow_background"
    app:cardElevation="15dp"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="false"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addCitaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#d32f2f"
            android:clickable="true"
            android:src="@drawable/add"
            android:layout_marginStart="70dp"
            android:layout_marginTop="80dp"
            app:fabSize="mini"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/nombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_prueba_nombre_producto"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/fotoProducto"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/precioProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_prueba_producto"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@id/fotoProducto"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/nombreProducto" />

        <TextView
            android:id="@+id/descripcionProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_prueba_producto"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/fotoProducto"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/precioProducto" />

        <ImageView
            android:id="@+id/fotoProducto"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:background="@drawable/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>


